--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "super-us-front",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.14.x",
+    "yarn": "1.22.x"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
